--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="{% if page.url == "/darmowe-powiadomienia-cenowe/" %} include notifications-app.html {% endif %}"/>
+<div class="{% if page.url contains "darmowe-powiadomienia-cenowe" %} include notifications-app.html {% endif %}"/>
 {% assign author = site.authors[page.author] %}
 <div class="container">
 <div class="jumbotron jumbotron-fluid mb-3 pl-0 pt-0 pb-0 bg-white position-relative">
