--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,9 +83,9 @@
                 <a class="text-dark ml-1" target="_blank" href="https://github.com/wowthemesnet/mundana-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a>
 
             </div>
-            <div>
+            <!-- <div>
                 Made with <a target="_blank" class="text-dark font-weight-bold" href="https://www.wowthemes.net/mundana-jekyll-theme/"> Mundana Jekyll Theme </a> by <a class="text-dark" target="_blank" href="https://www.wowthemes.net">WowThemes</a>.
-            </div>
+            </div> -->
         </div>
         </div>
     </footer>
