--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -1,13 +1,16 @@
 <!--  Replace menu links here -->
 
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/index.html">Home</a>
+<a class="nav-link" href="{{site.baseurl}}/index.html">Strona główna</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
+<a class="nav-link" href="{{site.baseurl}}/darmowe-powiadomienia-cenowe/">Powiadomienia cenowe</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
+<a class="nav-link" href="{{site.baseurl}}/authors-list.html">Autorzy</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="{{site.baseurl}}/contact.html">Kontakt</a>
 </li>
 <!-- <li class="nav-item">
 <a target="_blank" class="nav-link" href="https://www.wowthemes.net/themes/mundana-wordpress/">WP</a>
