--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
         <div class="row align-items-center justify-content-between">
             <div>
                 <!-- <span class="navbar-brand mr-2 mb-0"><strong>Mundana</strong></span> -->
-                <span>2023 - <script>document.write(new Date().getFullYear())</script>.</span>
+                <span>TeslaHub.pl, 2023 - <script>document.write(new Date().getFullYear())</script>.</span>
 
                 <!--  Github Repo Star Btn-->
                 <!-- <a class="text-dark ml-1" target="_blank" href="https://github.com/wowthemesnet/mundana-theme-jekyll"><i class="fab fa-github"></i> Fork on Github</a> -->
