--- a/_includes/main-loop-card.html
+++ b/_includes/main-loop-card.html
@@ -14,7 +14,7 @@
 		</span>
 	</small>
 	<small class="text-muted">
-		{{ post.date | date: '%b %d, %Y' }}
+		{{ post.date | date: '%D' }}
 	</small>
 </div>
 {% if post.image %}
