--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     <!-- Navbar -->
     <nav id="MagicMenu" class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ site.baseurl }}/index.html"><img width="250px" src="{{site.baseurl}}/assets/images/teslaonline.png"></a>
+        <a class="navbar-brand" href="{{ site.baseurl }}/index.html"><img width="250px" src="{{site.baseurl}}/assets/images/teslahub.png"></a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
