--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,9 @@ layout: default
 {% if page.url contains "darmowe-powiadomienia-cenowe" %}
 	{% include notifications-app.html %}
 {% endif %}
+{% if page.url contains "porownanie-parametrow" %}
+	{% include compare-app.html %}
+{% endif %}
 {% assign author = site.authors[page.author] %}
 <div class="container">
 <div class="jumbotron jumbotron-fluid mb-3 pl-0 pt-0 pb-0 bg-white position-relative">
