--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@ layout: default
 {% endif %}
 {% if page.url contains "porownanie-parametrow" %}
 	{% include compare-app.html %}
+	<script>
+		window.location = '#compare';
+	</script>
 {% endif %}
 {% assign author = site.authors[page.author] %}
 <div class="container">
