--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 {% if page.url contains "porownanie-parametrow" %}
 	{% include compare-app.html %}
 	<script>
-		window.location = '#compare';
+		window.location = '#/compare';
 	</script>
 {% endif %}
 {% assign author = site.authors[page.author] %}
