--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,7 +4,8 @@
 <a class="nav-link" href="{{site.baseurl}}/index.html">Strona główna</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/darmowe-powiadomienia-cenowe/"><strong>Powiadomienia o promocjach i rabatach na Tesle</strong></a>
+<!-- <a class="nav-link" href="{{site.baseurl}}/darmowe-powiadomienia-cenowe/"><strong>Powiadomienia o promocjach i rabatach na Tesle</strong></a> -->
+ <a class="nav-link" href="#"><strong>Powiadomienia tymczasowo zawieszone</strong></a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Autorzy</a>
