--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-{% if page.url contains "darmowe-powiadomienia-cenowe" %}
+<!-- {% if page.url contains "darmowe-powiadomienia-cenowe" %}
 	{% include notifications-app.html %}
-{% endif %}
+{% endif %} -->
 {% if page.url contains "porownanie-parametrow" %}
 	{% include compare-app.html %}
 	<script>
