--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -5,7 +5,7 @@
 </li>
 <li class="nav-item">
 <!-- <a class="nav-link" href="{{site.baseurl}}/darmowe-powiadomienia-cenowe/"><strong>Powiadomienia o promocjach i rabatach na Tesle</strong></a> -->
- <a class="nav-link" href="#"><strong>Powiadomienia tymczasowo zawieszone</strong></a>
+ <a class="nav-link" href="#"><strong>Powiadomienia o rabatach i promocjach zostały tymczasowo zawieszone</strong></a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Autorzy</a>
